# MultiHarpPatina

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: README.md
src/: error.rs  lib.rs  mhconsts.rs  mhlib.rs  multiharp.rs  testing.rs
src/testing/: debug_multiharp.rs  dummy_multiharp.rs
