[package]
name = "multi-harp-patina"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
build = "build.rs"
links = "mhlib64"
description = "Rust-based wrapped for the MultiHarp 150 library"
keywords = ["flim", "microscopy", "picoquant"]
rust-version = "1.66.0"

# For conditional compilation of
# functions only when the `MHLib`
# version exceeds a certain value
[features]
nolib = []
default = ["MHLib", "MHLv3_0_0"]
MHLib = []
MHLv3_0_0 = ["MHLib"]
MHLv3_1_0 = ["MHLv3_0_0"]

[[bin]]
name = "example_tttr"
path = "src/bin/tttr.rs"

[lib]
name = "multi_harp_patina"
path = "src/lib.rs"
crate-type = ["rlib","dylib"]


[dependencies]